<resources>
    <string name="app_name">Todo app</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_button">Sign In</string>
    <string name="text_button_sign_up">Sign Up</string>
    <string name="create_account_button">Create Account</string>
    <string name="signin_account_button">Sign In</string>

    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>

    <string name="are_you_sure">Are you sure you want to delete this item?</string>
    <string name="yes_delete">yes</string>
    <string name="no_delete">no</string>
    <string name="add_todo_title">Add todo item</string>
    <string name="title_hint">Title</string>
    <string name="hint_due_date">Due date (yyyy.MM.dd)</string>
    <string name="hint_description">Description</string>
    <string name="title_edit_todo">Edit todo item</string>
</resources>