<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bgred"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/usernameCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="24dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/sign_in_hint"
        android:paddingVertical="13sp"
        android:paddingLeft="19dp"
        android:textColorHint="@color/hintcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInText" />

    <AutoCompleteTextView
        android:id="@+id/emailCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/email_hint"
        android:paddingVertical="13sp"
        android:paddingLeft="19dp"
        android:textColorHint="@color/hintcolor"
        app:layout_constraintBottom_toTopOf="@+id/passwordCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/usernameCreate" />


    <EditText
        android:id="@+id/passwordCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="84dp"
        android:layout_marginRight="24dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/hint_password"

        android:inputType="textPassword"
        android:paddingVertical="13sp"
        android:paddingLeft="19dp"
        android:textColorHint="@color/hintcolor"
        app:layout_constraintEnd_toEndOf="@+id/usernameCreate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/usernameCreate"
        app:layout_constraintTop_toBottomOf="@+id/usernameCreate" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="72dp"
        android:background="@color/custompurple"
        android:onClick="onSignUp"
        android:padding="6dp"
        android:paddingHorizontal="39dp"
        android:text="@string/text_button_sign_up"
        android:textSize="16sp"
        android:textStyle="bold"
        app:constraint_referenced_tags="@string/sign_in"
        app:cornerRadius="66sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordCreate" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/signInAccountPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:text="@string/signin_account_button"
        android:textColor="#2196F3"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


</androidx.constraintlayout.widget.ConstraintLayout>