<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddActivity"
    android:background="@drawable/bg"
    android:orientation="vertical"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="196dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/baseline_title_24"
            android:hint="@string/title_hint"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></EditText>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="28dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/baseline_description_24"
            android:hint="@string/hint_description"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

        </EditText>

        <EditText
            android:id="@+id/dueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/baseline_date_range_24"

            android:ems="10"
            android:hint="@string/hint_due_date"
            android:inputType="date"
            android:padding="12dp"
            android:shadowColor="@color/white"
            android:shadowRadius="@integer/material_motion_duration_long_2"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintVertical_bias="0.082" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/add_todo_title"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:onClick="addTodoItem"
            android:id="@+id/checkButtonAdd"
            android:src="@drawable/baseline_check_24"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:background="@color/custompurple"
            android:layout_margin="20dp"
            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


